Misc. visual fixes - Fix horizontal overflow on containers - Make background animation a bit more subtle and respond to theme setting

--- a/src/global.css
+++ b/src/global.css
@@ -114,6 +114,7 @@ button:focus-visible {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 1.5rem;
+  box-sizing: border-box;
 }
 
 .section {
